<?xml version="1.0" encoding="UTF-8"?>

    <android.support.design.widget.CoordinatorLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/coordinator"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.design.widget.AppBarLayout
        android:layout_height="300dp"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


    <android.support.design.widget.CollapsingToolbarLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_collapseMode="parallax"
        android:contentDescription="@string/restaurant_image"
        android:src="@drawable/restaurant"
        android:scaleType="centerCrop"/>

    <android.support.v7.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        app:layout_collapseMode="pin"/>

</android.support.design.widget.CollapsingToolbarLayout>

</android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/order_name_hint"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/order_details_hint"/>

</LinearLayout>

</android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_done_white_24dp"
        android:onClick="onClickDone"
        android:layout_margin="16dp"
        android:layout_gravity="end|bottom"/>

</android.support.design.widget.CoordinatorLayout>